# semantic-search

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Containerfile  README.md  TODO.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
scripts/: 0000_a358487_add_status_indexes.sql  0001_2bfa077_add_page_language.py  README.md  import_chinese_independent_blogs.py  import_indieblog_feeds.py  migrate_to_vchord_bm25.py  remove_robots_disallowed_sites.py
src/semsearch/: cli.py  config.py  db.py  models.py  schema.sql  sites.py  url.py  util.py
src/semsearch/cli/: app.py  daemon.py  db.py  models.py  sites.py  url.py
src/semsearch/cli/daemon/: consumer.py  lease.py  queue.py  (+3 more)
src/semsearch/embeddings/: __init__.py  base.py  openai_compat.py
src/semsearch/ingest/: chunk.py  fetch.py  models.py  outcomes.py  service.py  sitemap.py
src/semsearch/search/: base.py  dense.py  filters.py  fusion.py  pipeline.py  service.py
src/semsearch/share/: config.py  db.py  embeddings.py  logging.py  schema.sql  status.py  util.py
src/semsearch/web/: app.py  db.py
tests/: README.md  test_bm25.py  test_chunk.py  test_config.py  test_consumer.py  test_crawl_db.py  test_crawl_jobs.py  test_daemon.py  test_db.py  test_dense.py  test_embeddings.py  test_fetch.py  test_language.py  test_lease.py  test_logging.py  test_outcomes.py  test_pipeline.py  test_queue.py  test_search_filters.py  test_search_grouping.py  test_site_removal.py  test_sitemap.py  test_sites.py  test_status.py  test_surfaces.py  test_url.py  test_util.py  test_web_logging.py  test_worker.py
(+23 files in other folders)
